fix(profile): gap on mobile

--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -9,6 +9,7 @@
 
 @media (max-width: 619px) {
   .profile {
+    gap: 32px;
     flex-direction: column;
   }
 }
